--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "text"
   ],
   "author": "François Faucon",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "jquery": ">=1.8.0"
   }
