--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "circle-text",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "A simple plugin to create curved text following circle.",
   "main": "circleText.js",
+  "homepage" : "https://github.com/bable3/circle-text",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
