--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "circle-text",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A simple plugin to create curved text following circle.",
   "main": "circleText.js",
   "homepage" : "https://github.com/bable3/circle-text",
@@ -13,7 +13,7 @@
   ],
   "author": "François Faucon",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "jquery": ">=1.8.0"
   }
 }
